--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8",
-    "styled-reset": "^4.5.1"
+    "styled-reset": "^4.5.1",
+    "tailwind-hamburgers": "^1.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
