--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-  REACT_APP_FIREBASE_API_KEY = AIzaSyCtE2QKVqDBkM9HK_E57oZ95XdHvLhp6vw,
-  REACT_APP_FIREBASE_AUTH_DOMAI = open-source-7f9c3.firebaseapp.com,
-  REACT_APP_DATABASE_URL= https://open-source-7f9c3-default-rtdb.asia-southeast1.firebasedatabase.app,
-  REACT_APP_FIREBASE_PROJECT_ID= open-source-7f9c3,
-  REACT_APP_FIREBASE_STORAGE_BUCKET= open-source-7f9c3.appspot.com,
-  REACT_APP_FIREBASE_MESSAGING_SENDER_ID= 908903691224,
-  REACT_APP_FIREBASE_APP_ID = 1:908903691224:web:4a9bcf4f6a22bd84e338ad,
-  REACT_APP_FIREBASE_MEASUREMENT_ID = G-LRX8HL9V7R,
+VITE_FIREBASE_API_KEY = AIzaSyCtE2QKVqDBkM9HK_E57oZ95XdHvLhp6vw
+VITE_FIREBASE_AUTH_DOMAI = open-source-7f9c3.firebaseapp.com
+VITE_DATABASE_URL= https://open-source-7f9c3-default-rtdb.asia-southeast1.firebasedatabase.app
+VITE_FIREBASE_PROJECT_ID= open-source-7f9c3
+VITE_FIREBASE_STORAGE_BUCKET= open-source-7f9c3.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID= 908903691224
+VITE_FIREBASE_APP_ID = 1:908903691224:web:4a9bcf4f6a22bd84e338ad
+VITE_FIREBASE_MEASUREMENT_ID = G-LRX8HL9V7R
